client/styles/less/styles.less
// # Transitions and Effects
// !!! consider pulling these out into better modules
// ______________________


// # Hover img
// - Image fades to full clarity
// ______________

.hover-img {
	opacity: .3;

	.transition(opacity .5s ease-in-out);

	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

	&:hover,
	&:focus {
		opacity: 1;
	}
}

// # Hover link
// - Link fades to colorful
// - color handled via JavaScript
// ______________

.hover-link {
	color: #BEBEBE;

	.transition(color .5s ease-in-out);

	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
}

// # Rotate effect
// - clicking on the plus button causes it to rotate
// _________________

.rotate-effect {
	.transition(1.5s ease-in-out);
}

// # Nav item transition
// - clicking on the plus button causes the nav items to appear sliding in
// _____________________

.nav-item-transition-1 {
	.transition(.5s ease-in-out);
}
.nav-item-transition-2 {
	.transition(.5s ease-in-out .5s);
}
.nav-item-transition-3 {
	.transition(.5s ease-in-out 1s);
}

// # Hover on nav item link
// - square brackets pop out
// __________________________

.hover-nav-item a::before,
.hover-nav-item a::after {
	display: inline-block;
	opacity: 0;
	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
	-ms-transition: -ms-transform 0.3s, opacity 0.2s;
	-o-transition: -o-transform 0.3s, opacity 0.2s;
	transition: transform 0.3s, opacity 0.2s;
}

.hover-nav-item a::before {
	margin-right: 10px;
	content: '[';

	-ms-transform: translate(20px, 0px);
	.translate3d(20px, 0px, 0px);
}

.hover-nav-item a::after {
	margin-left: 10px;
	content: ']';

	-ms-transform: translate(-20px, 0px);
	.translate3d(-20px, 0px, 0px);
}

.hover-nav-item a:hover::before,
.hover-nav-item a:hover::after,
.hover-nav-item a:focus::before,
.hover-nav-item a:focus::after {
	opacity: 1;

	-ms-transform: translate(0px, 0px);
	.translate3d(0px, 0px, 0px);
}

// # Utility classes
// ___________________

.opacity-hide {
	opacity: 0;
}

// # Variables
// ____________

// Smaller than xs (so even more so mobile)
@screen-xxs-max: 565px;

@border-color: @golden-gray-lighter;

@link-font-family: "Quicksand", Helvetica, Arial, sans-serif;

// # Overrides
// _____________


// ## Links
a {
	font-family: @link-font-family;
	font-weight: bold;

	font-size: 24px; font-size: 2.4rem;

	cursor: pointer;

	&:hover,
	&:focus {
		color: @link-color;
		text-decoration: none;
	}
}

// special handling for font sizes on mobile
@media (max-width: @screen-xxs-max) {
	p {
		font-size: 22px; font-size: 2.2rem;
		a {
			font-size: 18px; font-size: 1.8rem;
			text-transform: uppercase;
		}
	}
}

// # Header
// _________

@trim-height: 8px;
@header-height: 50px;
@num-trim-colors: 12;

#header {
 position: fixed;
 height: @trim-height + @header-height;
 width: 100%;
 z-index: @zindex-navbar;
}

.trim-color-block {
	height: @trim-height;
	width: 100% / @num-trim-colors;
	margin: 0;
	padding: 0;
	float: left;
	opacity: 1;
}

.header {
	margin-top: @trim-height;
	height: @header-height;
	background-color: @white;
	opacity: .9;
	border-bottom: 1px solid @border-color;
}

// this class encapsulates the header icons in the nav
// which are there for the case when the nav covers the header
.header-cover {
	height: @header-height;
	opacity: .9;
	float: left;
}

.header-inner {
	text-align: left;

	i {
		font-size: 26px; font-size: 2.6rem;
		line-height: @header-height;
		margin-left: 13px;
	}

	// TODO(joe): consider changing this image to something with color
	// TODO(joe): consider turning this into a font format
	.header-icon-image {
		height: 35px;
		margin-bottom: 8px;
		margin-left: 8px;
		margin-right: -4px;
	}
}

// # Footer
// _________

.footer {
	height: @header-height;
	background-color: @white;
	opacity: .9;
	border-bottom: 1px solid @border-color;

	span {
		vertical-align: middle;
	}

	i {
		font-size: 26px; font-size: 2.6rem;
		vertical-align: middle;
		margin-left: 6px;
		margin-right: 6px;
	}

	// TODO(joe): see header icon image
	.footer-icon-image {
		height: 35px;
		vertical-align: middle;
		margin-left: 30px;
		opacity: 0.8;
	}
}

// # Nav
// _______

@nav-margin-top: @trim-height;
@nav-height: @header-height;
@nav-item-horizontal-spacing: 14px;
@nav-border-color: @border-color;

.nav-fixed-buffer {
	height: @nav-height;
	margin-top: @nav-margin-top;
}

.nav-container {
	height: @nav-height;
	margin-top: @nav-margin-top;

	text-align: right;

	.nav-icon {
		padding: 0 20px; padding: 0 2rem;
		font-size: 26px; font-size: 2.6rem;
		line-height: @nav-height;
	}
}

.nav {
	display: inline-block;
	padding-left: @nav-item-horizontal-spacing;
}

.nav-item {
	display: inline-block;
	padding: 0px @nav-item-horizontal-spacing;
	&.active {
		-ms-transform: translate(-1 * @nav-item-horizontal-spacing, 0px);
		.translate3d(-1 * @nav-item-horizontal-spacing, 0px, 0px);
	}

	line-height: @nav-height;
	font-size: 18px; font-size: 1.8rem;
	font-weight: lighter;

	a {
		line-height: @nav-height;
		font-size: 18px; font-size: 1.8rem;
		font-weight: lighter;

		cursor: pointer;
	}
}

// nav-items should slide in from left on mobile
@media (max-width: @screen-xs-max) {
	.nav-item.active {
		-ms-transform: translate(@nav-item-horizontal-spacing / 2, 0px);
		.translate3d(@nav-item-horizontal-spacing / 2, 0px, 0px);
	}
}

// ## Nav not fixed



// ## Nav fixed

.nav-container {

	// Reusable styles a fixed nav
	.fixed() {
		position: fixed;
		width: 100%;
		top: 0px;
		left: 0px;
		z-index: @zindex-navbar-fixed;
		margin: 0px;
		margin-top: @trim-height;
	}

	&.fixed {
		.nav-container.fixed();
	}
}

// ## Nav on phones
// - fix to the top

@media (max-width: @screen-xs-max) {
	.nav-fixed-buffer {
		display: none;
	}

	.nav-container {

		// I'm hard setting the nav to be fixed using JavaScript
		// by putting a trigger of -100
		// so I think this code is effectively never reached
		// but I'll leave it here just in case
		.nav-container.fixed();

		text-align: left;

		.nav-icon {
			position: absolute;
			top: 0px;
			right: 0px;
		}
	}

	.nav {
		left: 0px;
		display: block;
		position: absolute;
		width: 100%;
		margin-top: @header-height;

		background-color: @white;
		border-bottom: 1px solid @nav-border-color;
	}

	.nav-item {
		display: block;
	}
}

// # Content
// ___________

#content {
	padding-top: @trim-height + @header-height;
}

// # Intro
// ___________

@intro-title-height: 203px;

#intro {
	.intro-img {
		width: @intro-title-height;
	}
	.intro-title-header {
		font-size: 90px; font-size: 9rem;
		margin: 0;
		line-height: @intro-title-height;

		a {
			font-size: 90px; font-size: 9rem;
		}
	}
}

// # Responsive sizing
// - font-size
// - margin and padding
// !!! improve this later by asking people if they like it
// ________________________

@media (max-width: @screen-xxs-max) {

	// make the title font fit on the screen
	#intro .intro-title-header {
		font-size: 68px; font-size: 6.8rem;
		a {
			font-size: 68px; font-size: 6.8rem;
		}
	}

	.golden-content {
		padding: 0px;
		p {
			a {
				text-transform: uppercase;
			}
		}
	}
}

@media (max-width: 385px) {

	// make the title font fit on even a really small phone
	#intro .intro-title-header {
		font-size: 50px; font-size: 5.0rem;
		a {
			font-size: 50px; font-size: 5.0rem;
		}
	}
}

// set the intro area spacing by abusing media queries
@media (max-width: @screen-xs-max) {
	#intro {
		padding-top: 104px; padding-top: 10.4rem; padding-top: 13vh;
		padding-bottom: 80px; padding-bottom: 8rem; padding-bottom: 10vh;
	}

	#intro-summary {
		margin-top: 53px; margin-top: 5.3rem; margin-top: 4vh;
		margin-bottom: 23px; margin-bottom: 2.3rem; margin-bottom: 1vh;
	}
}
// xxs overrides xs if necessary
@media (max-width: @screen-xxs-max) {
	#intro {
		padding-top: 105px; padding-top: 10.5rem;
		padding-bottom: 94px; padding-bottom: 9.4rem;
	}

	#intro-summary {
		margin-top: 92px; margin-top: 9.2rem;
		margin-bottom: 0px; margin-bottom: 0rem;
	}
}
@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
	#intro {
		padding-top: 86px; padding-top: 8.6rem; padding-top: 10vh;
		padding-bottom: 69px; padding-bottom: 6.9rem; padding-bottom: 8vh;
	}

	#intro-summary {
		margin-top: 33px; margin-top: 3.3rem; margin-top: 4vh;
		margin-bottom: 24px; margin-bottom: 2.4rem; margin-bottom: 3vh;
	}
}
@media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
	#intro {
		padding-top: 161px; padding-top: 16.1rem; padding-top: 20vh;
		padding-bottom: 94px; padding-bottom: 9.4rem; padding-bottom: 12vh;
	}

	#intro-summary {
		margin-top: 103px; margin-top: 10.3rem; margin-top: 14vh;
		margin-bottom: 62px; margin-bottom: 6.2rem; margin-bottom: 7vh;
	}
}
@media (min-width: @screen-lg-min) {
	#intro {
		padding-top: 161px; padding-top: 16.1rem; padding-top: 20vh;
		padding-bottom: 84px; padding-bottom: 8.4rem; padding-bottom: 12vh;
	}

	#intro-summary {
		margin-top: 103px; margin-top: 10.3rem; margin-top: 14vh;
		margin-bottom: 72px; margin-bottom: 7.2rem; margin-bottom: 8vh;
	}
}

// # Sections
// !!! consider pulling more of this into a general class
// ____________

@section-padding-vertical: 50px;

// # Projects
// ____________

#projects {
	padding-top: @section-padding-vertical;
	padding-bottom: @section-padding-vertical;
	border-top: 1px solid @border-color;
	border-bottom: 1px solid @border-color;

	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

	h2 {
		margin-bottom: 60px; margin-bottom: 6rem;
	}
}

// # Posts
// ____________

#posts {
	padding-top: @section-padding-vertical;
	padding-bottom: @section-padding-vertical;
	border-bottom: 1px solid @border-color;

	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

	h2 {
		margin-bottom: 60px; margin-bottom: 6rem;
	}
}

// # Pics
// ____________

#pics {
	padding-top: @section-padding-vertical;
	padding-bottom: @section-padding-vertical;
	border-bottom: 1px solid @border-color;

	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

	h2 {
		margin-bottom: 60px; margin-bottom: 6rem;
	}
}

